Ajout de la règle empêchant un utilisateur notlogged d'accéder aux jumptools, francisation et fix

--- a/src/app/core/jump/jump.component.scss
+++ b/src/app/core/jump/jump.component.scss
@@ -44,3 +44,9 @@
   }
 }
 
+.colored {
+color: $brand-darkred;
+  &:hover {
+    cursor:pointer;
+  }
+}
