--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -116,7 +116,7 @@ $width-menu-responsive: 425px;
         border-radius: 100px;
         color: #fff;
         line-height: 15px;
-        padding: 15px 70px 11px 15px;
+        padding: 15px 70px 13px 15px;
         margin-right: -70px;
         -webkit-transition: all 0.3s;
         -o-transition: all 0.3s;
@@ -154,7 +154,7 @@ $width-menu-responsive: 425px;
 }
 
 .extend-burger {
-  padding: 15px 75px 11px 15px !important;
+  padding: 15px 75px 13px 15px !important;
 }
 
 .overlay {
@@ -298,7 +298,7 @@ $width-menu-responsive: 425px;
     }
     .fb {
       &:hover {
-        color: #6091ce;
+        color: #316cad;
       }
     }
     .tw {
@@ -309,6 +309,12 @@ $width-menu-responsive: 425px;
     .ig {
       &:hover {
         color: #bd29a5;
+
+      }
+    }
+    .gitlab {
+      &:hover {
+        color: #fe6a3b;
 
       }
     }
